------------------------------------------------------------------------------
rsnapshot changelog
http://www.rsnapshot.org/
------------------------------------------------------------------------------

VERSION 1.3.x
------------------------------------------------------------------------------
- Print rnspashot's PID when logging to syslog, instead of the logger's PID.
- make script uses pod2man instead of /usr/bin/pod2man
- rsnapshot-diff: Fixed removed files reported as addition (+ mark)
- Introduction of backup_exec resource for running unix commands interspersed
  with backup and backup_script jobs.
- check for SIGPIPE, mainly in case cron fails when trying to mail
  (this is probably why rsnapshot dies mysteriously if it outputs when
  called by cron on a system which does not have mail working).
- add test case for -t showing --link-dest when there is only one snapshot
- if gnu_cp_al fails, test out a simple cp -al command before suggesting
  that the cp does not support -al.
- When snapshot_root does not exist, check existence of parent directories.
- include_conf `command` now strips backticks before execution (bug fix
  based on suggestion from David Osborn).
- Ignore extraneous output from lvremove command.  (patch by Tim Connors) 
- Update current maintainer status in Authors section of man page.
  (David Cantrell stepped down between 1.3.0 and 1.3.1.) 
- Remove some old (1.1.x -> 1.2.0) upgrade notices from man page.
- Allow linux_lvm_cmd_* in config file to have options also.
- Allow `backticks with options` in include_conf.
- Fix inaccurate omission of --link-dest in test-mode output:
  http://sourceforge.net/mailarchive/forum.php?thread_name=4986E5A4.3090002%40Media-Brokers.com&forum_name=rsnapshot-discuss
- rsnapshot-diff: Add -s option to show size of each file.
  http://sourceforge.net/mailarchive/forum.php?thread_name=20080128082704.03568f0c%40szpak&forum_name=rsnapshot-discuss


VERSION 1.3.1  (Aug 31 2008)