@@ -129,9 +129,6 @@ my $stop_on_stale_lockfile	= 0; # stop if there is a stale lockfile
 
 # how much noise should we make? the default is 2
 #
-# please note that direct rsync output does not get written to the log file, only to STDOUT
-# this is because we're not intercepting STDOUT while rsync runs
-#
 #	0	Absolutely quiet (reserved, but not implemented)
 #	1	Don't display warnings about FIFOs and special files
 #	2	Default (errors only)
@@ -3651,7 +3648,12 @@ sub rsync_backup_point {
 	$result = 1;
 	if (0 == $test) {
 		while ($tryCount < $rsync_numtries && $result !=0) {
-			$result = system(@cmd_stack);
+			my $pid = open(RSYNC, "@cmd_stack 2>&1 |")
+				or die "Couldn't fork rsync: $!\n";
+			while(<RSYNC>){
+				print_msg($_, 4);
+			}
+			$result = $?;
 			$tryCount += 1;
 		}
 
@@ -6318,9 +6320,6 @@ B<loglevel            3>
 
 This number means the same thing as B<verbose> above, but it determines how
 much data is written to the logfile, if one is being written.
-
-The only thing missing from this at the higher levels is the direct output
-from rsync. We hope to add support for this in a future release.
 
 =back
 
